--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   },
   "dependencies": {
     "babel-runtime": "^6.18.0",
-    "meteor-node-stubs": "~0.2.3"
+    "mantra-core": "^1.7.0",
+    "meteor-node-stubs": "~0.2.3",
+    "react": "^15.4.1"
   }
 }
